backend/build_errors.txt
   Compiling dofta-backend v1.0.0 (/home/clydeweb3securityresearcher/Doftav1.0/backend)
error[E0583]: file not found for module `handlers`
 --> src/websocket/mod.rs:1:1
  |
1 | pub mod handlers;
  | ^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `handlers`, create file "src/websocket/handlers.rs" or "src/websocket/handlers/mod.rs"
  = note: if there is a `mod handlers` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `jwt`
 --> src/websocket/mod.rs:2:1
  |
2 | pub mod jwt;
  | ^^^^^^^^^^^^
  |
  = help: to create the module `jwt`, create file "src/websocket/jwt.rs" or "src/websocket/jwt/mod.rs"
  = note: if there is a `mod jwt` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `middleware`
 --> src/websocket/mod.rs:3:1
  |
3 | pub mod middleware;
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: to create the module `middleware`, create file "src/websocket/middleware.rs" or "src/websocket/middleware/mod.rs"
  = note: if there is a `mod middleware` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `models`
 --> src/websocket/mod.rs:4:1
  |
4 | pub mod models;
  | ^^^^^^^^^^^^^^^
  |
  = help: to create the module `models`, create file "src/websocket/models.rs" or "src/websocket/models/mod.rs"
  = note: if there is a `mod models` elsewhere in the crate already, import it with `use crate::...` instead

error[E0425]: cannot find value `get_nonce` in this scope
  --> src/websocket/mod.rs:17:36
   |
17 |         .route("/auth/nonce", post(get_nonce))
   |                                    ^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `verify_signature` in this scope
  --> src/websocket/mod.rs:18:37
   |
18 |         .route("/auth/verify", post(verify_signature))
   |                                     ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `refresh_token` in this scope
  --> src/websocket/mod.rs:19:38
   |
19 |         .route("/auth/refresh", post(refresh_token))
   |                                      ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `logout` in this scope
  --> src/websocket/mod.rs:20:37
   |
20 |         .route("/auth/logout", post(logout))
   |                                     ^^^^^^ not found in this scope

warning: unused import: `get`
  --> src/websocket/mod.rs:10:15
   |
10 |     routing::{get, post},
   |               ^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `handlers::*`
  --> src/websocket/mod.rs:13:5
   |
13 | use handlers::*;
   |     ^^^^^^^^^^^

Some errors have detailed explanations: E0425, E0583.
For more information about an error, try `rustc --explain E0425`.
warning: `dofta-backend` (lib) generated 2 warnings
error: could not compile `dofta-backend` (lib) due to 8 previous errors; 2 warnings emitted
